# webscript_core

./: .gitignore  Cargo.toml  LICENSE
nscript/: add.ns  class.ns
src/: lib.rs  main.rs
src/builder/: block.rs  export.rs  expr.rs  function.rs  mod.rs  module.rs  type_.rs
src/builder/instructions/: int32.rs  mod.rs  op.rs
src/codegen/: codegen.rs  memory.rs  mod.rs  module.rs  utils.rs
src/codegen/compiler/: arithmetic.rs  call.rs  class.rs  fn_.rs  literal.rs  mod.rs  statement.rs
src/environment/: environment.rs  mod.rs  module.rs  name.rs
src/environment/state/: fn_scope.rs  mod.rs  scope.rs  state.rs
src/environment/types/: any_type.rs  mod.rs
src/environment/values/: any_value.rs  class.rs  function.rs  integer.rs  mod.rs  null.rs  store.rs  value.rs
src/nscript/: any_type.rs  any_value.rs  fn_name.rs  mod.rs  module.rs  state.rs
src/nscript/state/: fn_scope.rs  scope.rs  state.rs
src/nscript/types/: any_type.rs
src/nscript/values/: any_value.rs  class.rs  function.rs  integer.rs  mod.rs  null.rs  value.rs
src/parser/: expression.rs  expressions.rs  mod.rs  parser.rs  tokens.rs
src/parser/operations/: mod.rs  op0_highest.rs  op10_assignment.rs  op1_unitary.rs  op2_power.rs  op3_multiplicative.rs  op4_additive.rs  op5_shift.rs  op6_relational.rs  op7_equality.rs  op8_bitwise.rs  op9_logical.rs
src/parser/statements/: class.rs  fn_.rs  mod.rs  return_.rs  var.rs
src/tokenizer/: identifier.rs  keyword.rs  mod.rs  operator.rs  punctuator.rs  spaces.rs  tokens.rs
src/tokenizer/literals/: boolean.rs  integer.rs  mod.rs  null.rs  number.rs  (+1 more)
