[package]
name = "nscript_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
binaryen-sys = "0.12.0"
combine = "4.6.6"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng"]