[package]
name = "webscript_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
binaryen-sys = "0.12.0"
combine = "4.6.6"
wasmtime = "5.0.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[features]
debug-save-tokens = []
debug-save-ast = []
debug-save = ["debug-save-tokens", "debug-save-ast"]
debug-print-wasm-unoptimized = []
debug-print-wasm-optimized = []
debug-print-wasm = [
  "debug-print-wasm-unoptimized",
  "debug-print-wasm-optimized",
]
debug = ["debug-save", "debug-print-wasm"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
